fix location null